# Loan-Prequalification

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
api-service/: DockerFile  config.py  main.py  requirements.txt
api-service/api/routes/: applications.py
api-service/api/schemas/: applications.py
api-service/db/: crud.py  database.py  models.py
api-service/services/: kafka_producer.py
api-service/tests/routes/: test_applications.py
credit-service/: DockerFile  config.py  main.py
credit-service/services/: credit_consumer.py
credit-service/services/schemas/: credit_consumer.py
credit-service/tests/: test_credit_consumer.py
decision-service/: DockerFile  config.py  main.py
decision-service/services/: decision_consumer.py
decision-service/services/schemas/: decision_consumer.py
decision-service/tests/: test_decision_consumer.py
