[project]
name = "loan-prequal"
version = "1.0"
description = "loan prequalification application for python training"
authors = [
    {name = "Gopinath, Rethenya"}
]
readme = "README.md"
requires-python = ">3.14"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "black (>=25.9.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
